--- a/trunk/projet-be/styles/isi.css
+++ b/trunk/projet-be/styles/isi.css
@@ -356,6 +356,12 @@ body {
 	font-family : Verdana, Arial, sans-serif;
 	text-align: center;
 }
+#name{
+	font-size: large;
+	font-weight: bold;
+	font-family : Verdana, Arial, sans-serif;
+	text-align: center;
+}
 /* inline tables */
 table.ue {
 	background-color: #fff;
