--- a/trunk/projet-be/styles/isi.css
+++ b/trunk/projet-be/styles/isi.css
@@ -5,6 +5,12 @@ body {
 	FONT-FAMILY: "Trebuchet MS", Verdana, Geneva, Arial, Helvetica, sans-serif;
 	background-color: #e5e5e5;
 }
+th {
+	border-style : solid;
+	border-width : 1px;
+	border-color : #000000;
+	background-color: #EEEEEE;
+}
 #about {
 	text-align: right;
 }
@@ -283,11 +289,11 @@ body {
 	border : 0px;
 }
 #espacereserve th {
-	font-family : Verdana, Arial, sans-serif;
-	font-size : 11px;
 	border-style : solid;
-	border-width : 1px;
+	border-width : 3px;
 	border-color : #000000;
+	background-color: #66A8E7;
+	
 }
 #espacereserve td {
 	font-family : Verdana, Arial, sans-serif;
