--- a/trunk/projet-be/styles/isi.css
+++ b/trunk/projet-be/styles/isi.css
@@ -285,6 +285,9 @@ th {
 	color: #a8d3ee;
 	BACKGROUND-COLOR: transparent
 }
+#espacereserve {
+	color : #996666;
+}
 #espacereserve img {
 	border : 0px;
 }
